[package]
name = "leptonic-template-ssr-nightly"
version = "0.1.0"
edition = "2021"

[package.metadata.leptonic]
style-dir = "style"
js-dir = "public/js"

[package.metadata.leptos]
output-name = "leptonic-template-ssr-nightly"
site-root = "target/site"
site-pkg-dir = "pkg"
style-file = "style/main.scss"
assets-dir = "public"
site-addr = "127.0.0.1:3000"
reload-port = 3001
end2end-cmd = "npx playwright test"
end2end-dir = "end2end"
browserquery = "defaults"
watch = false
env = "DEV"
bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false
lib-profile-release = "wasm-release"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
hydrate = ["leptos/hydrate", "leptonic/hydrate"]
ssr = [
    "dep:axum",
    "dep:axum-server",
    "dep:tokio",
    "dep:tower",
    "dep:tower-http",
    "dep:leptos_axum",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "leptonic/ssr",
]

[dependencies]
axum = { version = "0.8.8", optional = true }
axum-server = { version = "0.8.0", features = ["tls-rustls"], optional = true }
console_error_panic_hook = "0.1.7"
leptonic = { git = "https://github.com/lpotthast/leptonic", branch = "hooks", features = ["full", "nightly"] }
leptos = { version = "0.8.15", features = ["nightly"] }
leptos-routes = { git = "https://github.com/lpotthast/leptos-routes", branch = "main" }
leptos_axum = { version = "0.8.7", optional = true }
leptos_meta = { version = "0.8.5", features = [] }
leptos_router = { version = "0.8.11", features = [] }
tokio = { version = "1.49.0", features = ["rt-multi-thread"], optional = true }
tower = { version = "0.5.3", optional = true }
tower-http = { version = "0.6.8", features = ["fs"], optional = true }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
tracing-wasm = "0.2.1"
wasm-bindgen = "0.2.108"

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 3

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
